@@ -1,3 +1,9 @@
+1998-08-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* gui.h (_Pixmap): Add create:widget: and create:file:.
+	Move setRaster: to using phase (still need to make implementation
+	synchronize).  Add save:.
+
 1998-07-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* gui.h (Graph): Add setRangesXMin:Max:.
